# rustenv

./: .env  .gitignore  Cargo.toml  LICENSE.md  README.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
app/: Cargo.toml
app/src/: lib.rs
app/src/views/: home.rs  not_found.rs
backend/: Cargo.toml
backend/src/: lib.rs
frontend/: Cargo.toml  index.html  tailwind.config.js
frontend/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  pool.rs
server/src/controllers/: auth_controller.rs
server/src/strategies/: auth_strategy.rs  mod.rs  user_strategy.rs
server/src/types/: auth.rs  user.rs
tauri/: Cargo.toml  tauri.conf.json
tauri/src/: main.rs
