[package]
name = "rustenv_backend"
version = "0.1.0"
description = "Rust application development environment"
authors = ["Spectrum Studios"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["ws"] }
serde = "1.0.214"
tokio = { version = "1.41.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }
