[package]
name = "rustenv_server"
version = "0.1.0"
description = "Rust application development environment"
authors = ["Spectrum Studios"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["ws"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
base64 = "0.22.1"
bcrypt = "0.16.0"
dotenv = "0.15.0"
http = "1.1.0"
jsonwebtoken = "9.3.0"
once_cell = "1.20.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sqlx = "0.8.2"
struct_iterable = "0.1.1"
tokio = { version = "1.41.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"] }
uuid = { version = "1.11.0", features = ["v4"] }
