[package]
name = "rustenv_tauri"
version = "0.1.0"
description = ""
authors = ["Spectrum Studios"]
license = "Apache-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
